--- a/NewsModule/Classes/LoginViewController.xib
+++ b/NewsModule/Classes/LoginViewController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C3012</string>
+		<string key="IBDocument.SystemVersion">12D78</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -247,6 +247,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 303}, {104, 15}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
+								<reference key="NSNextKeyView" ref="921264665"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -381,7 +382,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{1, 286}, {320, 1}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
-								<reference key="NSNextKeyView" ref="203536797"/>
+								<reference key="NSNextKeyView" ref="356383626"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUIImage" ref="472735351"/>
@@ -515,6 +516,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 426}, {320, 1}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUIImage" ref="472735351"/>
@@ -524,11 +526,31 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{105, 295}, {94, 27}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
+								<reference key="NSNextKeyView" ref="1010940184"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
+							</object>
+							<object class="IBUIButton" id="1010940184">
+								<reference key="NSNextResponder" ref="810542870"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{216, 292}, {96, 34}}</string>
+								<reference key="NSSuperview" ref="810542870"/>
+								<reference key="NSNextKeyView" ref="203536797"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="IBUIRestorationIdentifier">btnNotifications</string>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<string key="IBUINormalTitle">Notifications</string>
+								<reference key="IBUIHighlightedTitleColor" ref="404152171"/>
+								<reference key="IBUINormalTitleColor" ref="404152171"/>
+								<reference key="IBUINormalTitleShadowColor" ref="241396610"/>
+								<reference key="IBUINormalBackgroundImage" ref="224550913"/>
+								<reference key="IBUIFontDescription" ref="315245769"/>
+								<reference key="IBUIFont" ref="950532604"/>
 							</object>
 						</object>
 						<string key="NSFrame">{{0, 33}, {320, 378}}</string>
@@ -1064,6 +1086,15 @@
 					</object>
 					<int key="connectionID">196</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">btnUpdatePrices_Clicked</string>
+						<reference key="source" ref="1010940184"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">198</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1181,6 +1212,7 @@
 							<reference ref="203536797"/>
 							<reference ref="356383626"/>
 							<reference ref="921264665"/>
+							<reference ref="1010940184"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -1348,6 +1380,12 @@
 						<reference key="object" ref="921264665"/>
 						<reference key="parent" ref="810542870"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">197</int>
+						<reference key="object" ref="1010940184"/>
+						<reference key="parent" ref="810542870"/>
+						<string key="objectName">btnNotifications</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1382,6 +1420,7 @@
 					<string>192.IBPluginDependency</string>
 					<string>193.IBPluginDependency</string>
 					<string>194.IBPluginDependency</string>
+					<string>197.IBPluginDependency</string>
 					<string>20.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
@@ -1451,6 +1490,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1465,7 +1505,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">196</int>
+			<int key="maxID">198</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
@@ -1498,7 +1538,7 @@
 				<string>{320, 480}</string>
 				<string>{300, 30}</string>
 				<string>{9, 14}</string>
-				<string>{61, 33}</string>
+				<string>{149, 31}</string>
 				<string>{308, 1}</string>
 				<string>{61, 33}</string>
 				<string>{320, 35}</string>
