--- a/NewsModule/Classes/LoginViewController.xib
+++ b/NewsModule/Classes/LoginViewController.xib
@@ -526,14 +526,14 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{105, 295}, {94, 27}}</string>
 								<reference key="NSSuperview" ref="810542870"/>
-								<reference key="NSNextKeyView" ref="1010940184"/>
+								<reference key="NSNextKeyView" ref="596819041"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 							</object>
-							<object class="IBUIButton" id="1010940184">
+							<object class="IBUIButton" id="596819041">
 								<reference key="NSNextResponder" ref="810542870"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{216, 292}, {96, 34}}</string>
@@ -966,6 +966,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">btnNotifications</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="596819041"/>
+					</object>
+					<int key="connectionID">199</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="810542870"/>
 						<reference key="destination" ref="372490531"/>
@@ -1089,7 +1097,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">btnUpdatePrices_Clicked</string>
-						<reference key="source" ref="1010940184"/>
+						<reference key="source" ref="596819041"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -1212,7 +1220,7 @@
 							<reference ref="203536797"/>
 							<reference ref="356383626"/>
 							<reference ref="921264665"/>
-							<reference ref="1010940184"/>
+							<reference ref="596819041"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -1382,7 +1390,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">197</int>
-						<reference key="object" ref="1010940184"/>
+						<reference key="object" ref="596819041"/>
 						<reference key="parent" ref="810542870"/>
 						<string key="objectName">btnNotifications</string>
 					</object>
@@ -1505,7 +1513,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">198</int>
+			<int key="maxID">199</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
