--- a/RapnetModule/DiamondResultsVC.xib
+++ b/RapnetModule/DiamondResultsVC.xib
@@ -145,7 +145,7 @@
 				<reference key="NSNextKeyView" ref="983134222"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MC44IDAuOCAwLjgAA</bytes>
+					<bytes key="NSRGB">MC44IDAuMjExMDExMDY4NSAwLjQ3OTQxNTAzNTIAA</bytes>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
