--- a/DiamondResultDetailsActions.xib
+++ b/DiamondResultDetailsActions.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1552</int>
+		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -44,7 +44,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{144, 3}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="85562892"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="401147732"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -86,7 +85,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{86, 3}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="85562892"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="180426231"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -115,7 +113,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{29, 3}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="85562892"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1011597822"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -144,7 +141,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{201, 3}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="85562892"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="681237547"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -173,7 +169,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{257, 3}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="85562892"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -199,7 +194,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 43}</string>
 						<reference key="NSSuperview" ref="26558163"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1020226891"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -215,7 +209,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="85562892"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -405,147 +398,12 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondDesultDetailsVC</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="btnBackClicked:">id</string>
-						<string key="btnCertClicked:">id</string>
-						<string key="btnEmailClicked:">id</string>
-						<string key="btnImageClicked:">id</string>
-						<string key="btnSmsClicked:">id</string>
-						<string key="btnTelClicked:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="btnBackClicked:">
-							<string key="name">btnBackClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnCertClicked:">
-							<string key="name">btnCertClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnEmailClicked:">
-							<string key="name">btnEmailClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnImageClicked:">
-							<string key="name">btnImageClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnSmsClicked:">
-							<string key="name">btnSmsClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="btnTelClicked:">
-							<string key="name">btnTelClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="btnBack">UIButton</string>
-						<string key="btnCert">UIButton</string>
-						<string key="btnEmail">UIButton</string>
-						<string key="btnImage">UIButton</string>
-						<string key="btnSms">UIButton</string>
-						<string key="btnTel">UIButton</string>
-						<string key="cell">DiamondResultDetailCell</string>
-						<string key="cellActions">DiamondResultDetailsActions</string>
-						<string key="lblMainTitle">UILabel</string>
-						<string key="lblTitle">UILabel</string>
-						<string key="lblValue">UILabel</string>
-						<string key="resultCell">DiamondResultDetailCell</string>
-						<string key="resultCellActions">DiamondResultDetailsActions</string>
-						<string key="tblDiamond">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="btnBack">
-							<string key="name">btnBack</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnCert">
-							<string key="name">btnCert</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnEmail">
-							<string key="name">btnEmail</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnImage">
-							<string key="name">btnImage</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnSms">
-							<string key="name">btnSms</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnTel">
-							<string key="name">btnTel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cell">
-							<string key="name">cell</string>
-							<string key="candidateClassName">DiamondResultDetailCell</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cellActions">
-							<string key="name">cellActions</string>
-							<string key="candidateClassName">DiamondResultDetailsActions</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblMainTitle">
-							<string key="name">lblMainTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblTitle">
-							<string key="name">lblTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblValue">
-							<string key="name">lblValue</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="resultCell">
-							<string key="name">resultCell</string>
-							<string key="candidateClassName">DiamondResultDetailCell</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="resultCellActions">
-							<string key="name">resultCellActions</string>
-							<string key="candidateClassName">DiamondResultDetailsActions</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tblDiamond">
-							<string key="name">tblDiamond</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondDesultDetailsVC.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondResultDetailCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondResultDetailCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiamondResultDetailsActions</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiamondResultDetailsActions.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1552" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -561,6 +419,6 @@
 			<string key="tel32.png">{32, 32}</string>
 			<string key="tel32BW.png">{32, 32}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
